init production service

--- a/src/ProductionService/ProductionService.csproj
+++ b/src/ProductionService/ProductionService.csproj
@@ -16,14 +16,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Console\" />
-    <Folder Include="Application\GraphQL\" />
-    <Folder Include="Application\Jobs\" />
-    <Folder Include="Application\Subscribers\" />
-    <Folder Include="Application\Publishers\" />
-    <Folder Include="Application\Usecases\" />
-    <Folder Include="Domain\" />
-    <Folder Include="Infrastructure\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0-rc.1.20451.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Core\Application\" />
+    <Folder Include="Core\Infrastructure\Persistence\Migrations\" />
+    <Folder Include="GraphQL\" />
+    <Folder Include="Jobs\" />
+    <Folder Include="Subscribers\" />
+    <Folder Include="Publishers\" />
   </ItemGroup>
 
 </Project>
