--- a/src/ProductionService/appsettings.json
+++ b/src/ProductionService/appsettings.json
@@ -2,6 +2,9 @@
   "App": {
     "Name": "production-service"
   },
+  "connectionStrings": {
+    "sqlserver": "Data Source=localhost,1433;Initial Catalog=modernstoredb;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
