--- a/src/ProductionService/appsettings.json
+++ b/src/ProductionService/appsettings.json
@@ -12,12 +12,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "http": {
-        "url": "http://localhost:5002"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
