--- a/src/SaleService/appsettings.json
+++ b/src/SaleService/appsettings.json
@@ -2,6 +2,9 @@
   "App": {
     "Name": "sale-service"
   },
+  "connectionStrings": {
+    "sqlserver": "Data Source=localhost,1433;Initial Catalog=modernstoredb;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,12 +12,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "http": {
-        "url": "http://localhost:5003"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
