add handler for get products

--- a/src/Gateway/appsettings.json
+++ b/src/Gateway/appsettings.json
@@ -42,7 +42,7 @@
             "Prefix": "X-Forwarded-"
           },
 
-          { "PathSet": "/weatherforecast" },
+          { "PathSet": "/products" },
 
           { "RequestHeadersCopy": "true" },
           { "RequestHeaderOriginalHost": "true" }
