--- a/src/BuildingBlocks/N8T.Infrastructure/N8T.Infrastructure.csproj
+++ b/src/BuildingBlocks/N8T.Infrastructure/N8T.Infrastructure.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-rc.1.20451.14" />
     <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.7.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.KeyPerFile" Version="5.0.0-rc.1.20451.17" />
+    <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0-rc.1.20451.14" />
     <PackageReference Include="Microsoft.Tye.Extensions.Configuration" Version="0.4.0-alpha.20371.1" />
     <PackageReference Include="Scrutor" Version="3.2.2" />
