--- a/src/ProductionService/appsettings.json
+++ b/src/ProductionService/appsettings.json
@@ -5,6 +5,11 @@
   "connectionStrings": {
     "sqlserver": "Data Source=localhost,1433;Initial Catalog=modernstoredb;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=True;"
   },
+  "Redis": {
+    "Url": "localhost:6379",
+    "Password": "",
+    "Prefix": "production_service"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
