--- a/src/ProductionService/appsettings.json
+++ b/src/ProductionService/appsettings.json
@@ -10,6 +10,17 @@
     "Password": "",
     "Prefix": "production_service"
   },
+  "Authn": {
+    "Authority": "http://identity-service",
+    "Audience": "https://localhost:5001/resources",
+    "RequireHttpsMetadata": false,
+    "IncludeErrorDetails": true,
+    "TokenValidationParameters": {
+      "ValidateLifetime": true,
+      "ValidateIssuer": false,
+      "ValidateIssuerSigningKey": false
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
