--- a/src/Gateway/appsettings.json
+++ b/src/Gateway/appsettings.json
@@ -32,8 +32,7 @@
         "RouteId": "production",
         "ClusterId": "production-svc-cluster",
         "Match": {
-          "Methods": [ "GET", "POST" ],
-          "Path": "/p/products"
+          "path": "/{**catchall}"
         },
         "Transforms": [
           {
@@ -41,8 +40,6 @@
             "Append": "true",
             "Prefix": "X-Forwarded-"
           },
-
-          { "PathSet": "/products" },
 
           { "RequestHeadersCopy": "true" },
           { "RequestHeaderOriginalHost": "true" }
