--- a/tye.yaml
+++ b/tye.yaml
@@ -24,8 +24,8 @@ services:
 - name: identityservice
   project: src/IdentityService/IdentityService.csproj
 
-# - name: appgateway
-#   project: src/Gateway/AppGateway.csproj
+- name: appgateway
+  project: src/Gateway/AppGateway.csproj
 
 - name: sqlserver
   image: mcr.microsoft.com/mssql/server:2017-latest
